tests/js_error/source_locations/statement/for_of/iterator_close.exp
Error: 
  ┌ source_locations/statement/for_of/iterator_close.js:8:15
  |
8 |         throw new Error();
  |               ^
Stack trace:
  at get return (source_locations/statement/for_of/iterator_close.js:8:15)
  at <global> (source_locations/statement/for_of/iterator_close.js:14:12)